# parking-map-backend-ml

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/controllers/: auth.py  ready.py
app/exceptions/: __init__.py
app/models/: base.py
app/services/: db.py  keycloak_driver.py  redis.py  s3.py
app/services/ml/: crop_json.py  show_predict.py
app/services/ml/image_tools/: utility_crop.py  utility_region.py  сlassificator.py
app/views/: __init__.py  auth.py
